--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ python-dotenv==1.0.1
 Requests==2.32.3
 streamlit==1.42.1
 Wikipedia_API==0.8.1
+torch==1.9.0
+transformers==4.11.3
+sentence_transformers==2.1.0
